<resources>
    <string name="app_name">Inventory App</string>
    <string name="action_settings">Settings</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_big">Big</string>
    <string name="new_record_activity_title_new_product">Add a new product</string>
    <string name="new_record_activity_title_edit_product">Edit a product</string>
    <string name="insert_data">Insert</string>
    <string name="delete_data">Delete</string>
    <string name="delete_all_data">Delete All</string>
    <string name="save_data">Save</string>
    <string name="new_record_insert_product_successful">Product saved</string>
    <string name="new_record_insert_product_failed">Error with saving product</string>
    <string name="new_record_update_product_successful">Product updated</string>
    <string name="new_record_update_product_failed">Error with updating product</string>
    <string name="new_record_delete_product_successful">Product deleted</string>
    <string name="new_record_delete_product_failed">Error with deleting product</string>
    <string name="new_record_error_message">All data are required</string>


    <string name="empty_view_title_text">It\'s a bit lonely here&#8230;</string>
    <string name="empty_view_subtitle_text">Add a new product to data base</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_price">Unknown price</string>
    <string name="quantity_zero">Quantity cannot be less than zero</string>
    <string name="quantity_zero_sale">This product is sold out</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>


    <string name="label_name">name</string>
    <string name="label_price">price</string>
    <string name="label_size">size</string>
    <string name="label_quantity">quantity</string>
    <string name="label_supplier">supplier</string>
    <string name="label_phone">phone</string>
    <string name="label_sale">sale</string>
    <string name="label_edit">edit</string>
    <string name="label_details">details</string>


    <string-array name="array_size_options">
        <item>@string/size_small</item>
        <item>@string/size_medium</item>
        <item>@string/size_big</item>
    </string-array>
</resources>
