<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/label_padding"
            android:text="@string/label_name"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/label_padding"
            android:text="@string/label_price"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#2B3D4D" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/label_padding"
            android:text="@string/label_quantity"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#2B3D4D" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">


        <Button
            android:id="@+id/sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/label_sale" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:focusable="false"
            android:paddingBottom="@dimen/button_top"
            android:paddingEnd="@dimen/button_left"
            android:paddingStart="@dimen/button_left"
            android:paddingTop="@dimen/button_top"
            android:text="@string/label_edit"
            android:textAllCaps="true"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>